--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,11 @@
   height: 80px;
 }
 
+.error {
+ color: red;
+  width: 100%;
+  height: 100px;
+}
 .App-header {
   background-color: #222;
   height: 150px;
@@ -22,6 +27,34 @@
   font-size: large;
 }
 
+.user-row {
+  width: 100%;
+  height: 100px;
+  background: blue;
+  padding: 10px;
+}
+ol{
+  width: 100%;
+  height: 100px;
+  background: yellow;
+}
+li{
+ width: 100px;
+ height: 20px;
+}
+
+.user {
+ padding: 20px;
+}
+.warning {
+  color: red;
+  font-size: 10px;
+  text-align: center;
+  font-type: bold;
+}
+.hidden {
+ display: none; 
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
